<resources>
    <string name="app_name">ComicsMgr</string>
    <string name="title_home">Home</string>
    <string name="seleccionar_carpeta">Seleccionar Carpeta</string>
    <string name="strTitulo">Titulo</string>
    <string name="strPeridiocidad">Peridiocidad</string>
    <string name="strEditorial">Editorial</string>
    <string name="strFecha">Fecha</string>
    <string name="strNumero">Número</string>
    <string name="strPrecio">Precio</string>
    <string name="strMiniserie">Miniserie</string>
    <string name="agregar_cal">Agregar Calendario</string>
    <string name="strClaveComic">Clave Comic</string>
    <string name="strGuardar">Guardar</string>
    <string name="strCancelar">Cancelar</string>
    <string name="strTotalNumeros">De</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="strAgregarComics">Agregar Comic</string>
    <string name="action_search">Buscar</string>
    <string name="shopping_cart">Agregar a Carrito</string>
    <string name="remove_cart">Quitar de Carrito</string>
    <string name="strEditar">Editar</string>
    <string name="strComprar">Comprar</string>
    <string name="strBorrar">Borrar</string>
    <string name="strComicBuscar">Comics a Buscar</string>
    <string name="activity_new_message">BuscarComics</string>
    <string name="strTotal">Total</string>
    <string name="strEditarComic">Editar Comic</string>
    <string name="title_activity_file_chooser">FileChooserActivity</string>
    <string name="action_select">Seleccionar</string>
    <string name="strBorrarTodo">Borrar Todo</string>
    <string name="title_notifications">Pendientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strMeses">Meses</string>
    <string name="strDias">Dias</string>
    <string name="title_calendario">Calendario</string>
    <string name="title_carrito">Carrito</string>
    <string name="openfiledialog_dialog_title">Buscar Archivo</string>
    <string name="hello_world">hola mundo</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="strEnPublicacion">En Publicación</string>
    <string name="strEnEspera">En Espera</string>
    <string name="strDescripcion">Descripción</string>
    <string name="strTiempo">Tiempo</string>
    <string name="strAceptar">Aceptar</string>
    <string name="str_limpiar">Limpiar</string>
</resources>
